<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/splash"
    tools:context=".activities.MainActivity">


    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/toolbarbg"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_customer"
                android:layout_centerVertical="true"
                android:textSize="20sp"
                android:textStyle="bold"
                />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:text="@string/view"
                android:id="@+id/seeAll"
                android:layout_centerVertical="true"
                android:background="@color/colorPrimaryDark"
                />

        </RelativeLayout>

    </android.support.v7.widget.Toolbar>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/count"
        android:text="Records : 0"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_margin="5dp"
        />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginStart="15dp"
            android:orientation="vertical"
            >

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext_xml"
                android:id="@+id/nameEt"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:hint="@string/customer_name"
                android:layout_marginTop="5dp"
                android:inputType="textPersonName"
                android:padding="8dp"
                android:textColorHint="@color/grey"
                />


            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext_xml"
                android:id="@+id/phoneEt"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:hint="@string/customer_num"
                android:layout_marginTop="8dp"
                android:inputType="number"
                android:maxLength="11"
                android:padding="8dp"
                android:textColorHint="@color/grey"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext_xml"
                android:id="@+id/regNoEt"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:hint="@string/customer_reg"
                android:layout_marginTop="8dp"
                android:inputType="number"
                android:padding="8dp"
                android:textColorHint="@color/grey"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext_xml"
                android:id="@+id/entryNoEt"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:hint="@string/customer_entry"
                android:layout_marginTop="8dp"
                android:inputType="number"
                android:padding="8dp"
                android:textColorHint="@color/grey"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:background="@drawable/edittext_xml"
                android:id="@+id/descEt"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:hint="@string/customer_desc"
                android:layout_marginTop="8dp"
                android:inputType="textMultiLine"
                android:lines="4"
                android:padding="8dp"
                android:textColorHint="@color/grey"
                android:textAlignment="textStart"
                android:gravity="start"
                />
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_marginTop="15dp"
    android:weightSum="2"
    >
    <Button
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:text="@string/new_customer"
        android:background="@drawable/btn_skip_normal"
        android:id="@+id/addCust"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:padding="10dp"
        android:layout_weight="1"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:text="@string/view_customer"
        android:background="@drawable/btn_skip_normal"
        android:id="@+id/viewCust"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:padding="10dp"
        android:layout_weight="1"
        android:layout_marginLeft="5dp"
        />


</LinearLayout>
        </LinearLayout>


    </ScrollView>

</LinearLayout>